<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>nml_bag_ros2</name>
  <version>0.0.1</version>
  <description>Simple vendor to provide PIP package "nml_bag" in ros2 application.</description>
  <maintainer email="thibault.poignonec@gmail.com">Thibault Poignonec</maintainer>
  <license>Apache License 2.0</license>  <!-- the contents of this package are Apache 2.0 -->

  <author email="thibault.poignonec@gmail.com">Thibault Poignonec</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>ament_cmake_test</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <exec_depend>python3-ipykernel</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-tqdm</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-seaborn</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-scienceplots</exec_depend>

  <buildtool_export_depend>pkg-config</buildtool_export_depend>

  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <!-- <build_type>ament_cmake</build_type> -->
  </export>
</package>
